--- a/firefox_plugin/transcriptionHelp/transcriptionHelp.css
+++ b/firefox_plugin/transcriptionHelp/transcriptionHelp.css
@@ -1,14 +1,17 @@
 #predBoxDiv {
   background-color: white;
   display: none;
-  overflow-y: scroll;
+  overflow: auto;
   position: absolute;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   transform-origin: top right;
+  height: 300px;
+  z-index: 100;
 }
 
 .pred-div {
   background-color: white;
+  display: inline-block;
 }
 
 .pred-div:focus {
